--- a/views/logged.hbs
+++ b/views/logged.hbs
@@ -1,5 +1,13 @@
 <section class="index-page">
-  <p class="success">
-    You have been successfully logged in!
-  </p>
+  {{#if isLogged}}
+    <div>
+      <h3>User Panel</h3>
+      <img class="avatar" src={{picURL}} />
+      <h4>Hello {{userName}}</h4>
+    </div>
+  {{/if}}
+
+  <a class="loginBtn logOutBtn" href="/user/user/auth/loggedOut">
+    Log Out
+  </a>
 </section>
